<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_social_content"
            android:src="@color/colorPrimary"
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_gravity="center"
            android:contentDescription="@string/post_content" />

        <TextView
            android:id="@+id/txt_social_content"
            android:text="@string/lorem_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/layout_btn_social_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/emote"/>
            <Button
                android:id="@+id/btn_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/comment"/>
            <Button
                android:id="@+id/btn_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/tag"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>