<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="post"
            type="com.perfectlunacy.bailiwick.models.ipfs.Post"/>
    </data>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_social_content"
            android:src="@color/colorPrimary"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:contentDescription="@string/post_content" />

        <TextView
            android:id="@+id/txt_social_content"
            android:text="@{post.text}"
            android:hint="@string/post_hint"
            android:textSize="18sp"
            android:paddingHorizontal="10dp"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <LinearLayout
            android:background="#222222"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            />

        <LinearLayout
            android:id="@+id/layout_btn_social_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/emote"/>
            <Button
                android:id="@+id/btn_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/comment"/>
            <Button
                android:id="@+id/btn_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/tag"/>
        </LinearLayout>
    </LinearLayout>
</layout>