<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.NewUserFragment">
    <data>
        <variable name="name" type="String"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user_name"/>
            <EditText
                android:id="@+id/new_user_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_user_name_hint"
                android:inputType="text"
                android:text="@{name}"
                android:autofillHints="@string/new_user_name_hint" />
        </LinearLayout>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/new_user_btn_go"/>

    </LinearLayout>
</layout>