<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AcceptSubscriptionFragment">

    <data>
        <variable name="model" type="com.perfectlunacy.bailiwick.viewmodels.BailiwickViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:text="@string/make_a_connection" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_scan"
                android:text="@string/scan"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_images"
                android:text="@string/from_images"
                android:paddingHorizontal="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_send_response"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_response_qr"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="300dp"/>
            <Button
                android:id="@+id/btn_send"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_response"
                android:paddingHorizontal="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</layout>